plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'mx.edu.unpa'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}
ext {
    mapstructVersion = '1.6.0.Beta2'  // versión estable 
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	// binding para que Lombok y MapStruct trabajen juntos (recomendado si usas lombok)
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	
	// MapStruct API (para usar las anotaciones y typesafe mapping)
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	// MapStruct annotation processor -> genera las implementaciones en compilación
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
    
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.liquibase:liquibase-core'

	// 2. JWT (Para generar y validar tokens)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	//WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	
}

tasks.named('test') {
	useJUnitPlatform()
}
sourceSets {
    main {
        java {
            srcDirs += 'build/generated/sources/annotationProcessor/java/main'
        }
    }
}
